force-app/main/default/objects/Schedule_Issue__c/Schedule_Issue__c.object-meta.xml
<CustomObject>
    <label>Schedule Issue</label>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>