force-app/main/default/objects/Schedule_Issue__c/fields/Crew__c.field-meta.xml
<CustomField>
    <fullName>Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Schedule Issues</relationshipLabel>
    <relationshipName>Schedule_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>