force-app/main/default/objects/Schedule_Issue__c/fields/Field_Manager__c.field-meta.xml
<CustomField>
    <fullName>Field_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Schedule Issues (Field Manager)</relationshipLabel>
    <relationshipName>Schedule_Issues_FM</relationshipName>
    <type>Lookup</type>
</CustomField>