force-app/main/default/objects/Schedule_Issue__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery Issue</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Site Readiness</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Traffic</fullName>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Time Off</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>EPO</fullName>
            </value>
            <value>
                <fullName>2PM Health Check</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Incomplete Schedule</fullName>
            </value>
            <value>
                <fullName>Missing Material</fullName>
            </value>
            <value>
                <fullName>Site Issue</fullName>
            </value>
            <value>
                <fullName>Safety Hazard</fullName>
            </value>
            <value>
                <fullName>Equipment Issue</fullName>
            </value>
            <value>
                <fullName>Builder Restriction</fullName>
            </value>
            <value>
                <fullName>Backcharge Risk</fullName>
                <isActive>false</isActive>
                <label>Backcharge Risk</label>
            </value>
            <value>
                <fullName>Crew Unassigned</fullName>
                <isActive>false</isActive>
                <label>Crew Unassigned</label>
            </value>
            <value>
                <fullName>Customer / Builder Hold</fullName>
                <isActive>false</isActive>
                <label>Customer / Builder Hold</label>
            </value>
            <value>
                <fullName>Duration Missing</fullName>
                <isActive>false</isActive>
                <label>Duration Missing</label>
            </value>
            <value>
                <fullName>Field Manager Missing</fullName>
                <isActive>false</isActive>
                <label>Field Manager Missing</label>
            </value>
            <value>
                <fullName>Finished Job Risk</fullName>
                <isActive>false</isActive>
                <label>Finished Job Risk</label>
            </value>
            <value>
                <fullName>Inventory Hold</fullName>
                <isActive>false</isActive>
                <label>Inventory Hold</label>
            </value>
            <value>
                <fullName>Late Submission</fullName>
                <isActive>false</isActive>
                <label>Late Submission</label>
            </value>
            <value>
                <fullName>Missing Coordinates</fullName>
                <isActive>false</isActive>
                <label>Missing Coordinates</label>
            </value>
            <value>
                <fullName>Resource Absence / PTO Conflict</fullName>
                <isActive>false</isActive>
                <label>Resource Absence / PTO Conflict</label>
            </value>
            <value>
                <fullName>Safety Issue</fullName>
                <isActive>false</isActive>
                <label>Safety Issue</label>
            </value>
            <value>
                <fullName>Service Territory Missing</fullName>
                <isActive>false</isActive>
                <label>Service Territory Missing</label>
            </value>
            <value>
                <fullName>Site Access Issue</fullName>
                <isActive>false</isActive>
                <label>Site Access Issue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>