force-app/main/default/objects/Schedule_Issue__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Schedule Issues</relationshipLabel>
    <relationshipName>Schedule_Issues_Market</relationshipName>
    <type>Lookup</type>
</CustomField>