force-app/main/default/objects/Schedule_Issue__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owned Schedule Issues</relationshipLabel>
    <relationshipName>Owned_Schedule_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>