force-app/main/default/objects/Schedule_Issue__c/fields/Required_Action__c.field-meta.xml
<CustomField>
    <fullName>Required_Action__c</fullName>
    <label>Required Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assign Field Manager</fullName>
            </value>
            <value>
                <fullName>Assign Resource / Crew</fullName>
            </value>
            <value>
                <fullName>Complete Takeoff</fullName>
            </value>
            <value>
                <fullName>Confirm Site Ready</fullName>
            </value>
            <value>
                <fullName>Resolve Inventory Hold</fullName>
            </value>
            <value>
                <fullName>Add Coordinates</fullName>
            </value>
            <value>
                <fullName>Review Weather Hold</fullName>
            </value>
            <value>
                <fullName>Review Traffic Impact</fullName>
            </value>
            <value>
                <fullName>Contact Builder</fullName>
            </value>
            <value>
                <fullName>Contact Customer Success</fullName>
            </value>
            <value>
                <fullName>Create Finished Job</fullName>
            </value>
            <value>
                <fullName>Review Backcharge Risk</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Release Schedule</fullName>
            </value>
            <value>
                <fullName>Cancel Appointment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>