force-app/main/default/objects/Schedule_Issue__c/fields/Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Day</label>
    <referenceTo>Schedule_Day__c</referenceTo>
    <relationshipLabel>Schedule Issues</relationshipLabel>
    <relationshipName>Schedule_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>