force-app/main/default/objects/Schedule_Issue__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Schedule Issues</relationshipLabel>
    <relationshipName>Schedule_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>