force-app/main/default/objects/Schedule_Issue__c/fields/Standard_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Standard_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Schedule Issues</relationshipLabel>
    <relationshipName>StandardScheduleIssues</relationshipName>
    <type>Lookup</type>
</CustomField>