force-app/main/default/objects/Schedule_Issue__c/fields/Standard_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>Standard_WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Schedule Issues</relationshipLabel>
    <relationshipName>Standard_WorkOrder_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>