force-app/main/default/objects/Schedule_Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
            <value>
                <fullName>Action Required</fullName>
                <isActive>false</isActive>
                <label>Action Required</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Cleared</fullName>
                <isActive>false</isActive>
                <label>Cleared</label>
            </value>
            <value>
                <fullName>Hold</fullName>
                <isActive>false</isActive>
                <label>Hold</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Reviewing</fullName>
                <isActive>false</isActive>
                <label>Reviewing</label>
            </value>
            <value>
                <fullName>Waiting on Builder</fullName>
                <isActive>false</isActive>
                <label>Waiting on Builder</label>
            </value>
            <value>
                <fullName>Waiting on Customer Success</fullName>
                <isActive>false</isActive>
                <label>Waiting on Customer Success</label>
            </value>
            <value>
                <fullName>Waiting on Field Manager</fullName>
                <isActive>false</isActive>
                <label>Waiting on Field Manager</label>
            </value>
            <value>
                <fullName>Waiting on Inventory</fullName>
                <isActive>false</isActive>
                <label>Waiting on Inventory</label>
            </value>
            <value>
                <fullName>Waiting on Scheduling</fullName>
                <isActive>false</isActive>
                <label>Waiting on Scheduling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>