force-app/main/default/objects/Schedule_Issue__c/validationRules/High_Critical_Requires_Field_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>High_Critical_Requires_Field_Manager</fullName>
    <active>true</active>
    <description>High or Critical severity issues require a Field Manager to be assigned before saving.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(Severity__c, &quot;High&quot;), ISPICKVAL(Severity__c, &quot;Critical&quot;)), ISBLANK(Field_Manager__c))</errorConditionFormula>
    <errorMessage>High and Critical issues require a Field Manager. Please assign a Field Manager before saving.</errorMessage>
</ValidationRule>