force-app/main/default/objects/Schedule_Issue__c/validationRules/Missing_Coordinates_Requires_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Coordinates_Requires_Record</fullName>
    <active>true</active>
    <description>Missing Coordinates issues must link to a Service Appointment or Work Order so the correct record can be geocoded.</description>
    <errorConditionFormula>AND(ISPICKVAL(Issue_Type__c, &quot;Missing Coordinates&quot;), ISBLANK(Service_Appointment__c), ISBLANK(Work_Order__c))</errorConditionFormula>
    <errorMessage>Missing Coordinates issues require a Service Appointment or Work Order. Please link one before saving.</errorMessage>
</ValidationRule>