force-app/main/default/objects/Schedule_Issue__c/validationRules/Takeoff_Incomplete_Requires_Work_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Takeoff_Incomplete_Requires_Work_Order</fullName>
    <active>true</active>
    <description>Takeoff Incomplete issues must be linked to a Work Order.</description>
    <errorConditionFormula>AND(ISPICKVAL(Issue_Type__c, &quot;Takeoff Incomplete&quot;), ISBLANK(Work_Order__c))</errorConditionFormula>
    <errorMessage>Takeoff Incomplete issues require a Work Order. Please link the affected Work Order before saving.</errorMessage>
</ValidationRule>