force-app/main/default/objects/Schedule_Issue__c/validationRules/Traffic_Requires_Market.validationRule-meta.xml
<ValidationRule>
    <fullName>Traffic_Requires_Market</fullName>
    <active>true</active>
    <description>Traffic issues must specify a Market so dispatchers know which territory is affected.</description>
    <errorConditionFormula>AND(ISPICKVAL(Issue_Type__c, &quot;Traffic&quot;), ISBLANK(Market__c))</errorConditionFormula>
    <errorMessage>Traffic issues require a Market. Please select the affected Market before saving.</errorMessage>
</ValidationRule>