force-app/main/default/objects/Schedule_Issue__c/validationRules/Weather_Requires_Market.validationRule-meta.xml
<ValidationRule>
    <fullName>Weather_Requires_Market</fullName>
    <active>true</active>
    <description>Weather issues must specify a Market (ServiceTerritory) so alerts can be routed correctly.</description>
    <errorConditionFormula>AND(ISPICKVAL(Issue_Type__c, &quot;Weather&quot;), ISBLANK(Market__c))</errorConditionFormula>
    <errorMessage>Weather issues require a Market. Please select the affected Market before saving.</errorMessage>
</ValidationRule>